--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-
+    <style>
+        div{
+            color: skyblue;
+        }
+    </style>
 </head>
 <body>
     <div>
         哈哈哈哈
     </div>
-
 </body>
 </html>
